--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "PORT=3000 nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/TheBeff/acme-categories/issues"
   },
-  "homepage": "https://github.com/TheBeff/acme-categories#readme"
+  "homepage": "https://github.com/TheBeff/acme-categories#readme",
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "express": "^4.14.0",
+    "method-override": "^2.3.6",
+    "nodemon": "^1.10.0",
+    "path": "^0.12.7",
+    "swig": "^1.4.2"
+  }
 }
